--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>jaxrs-api</artifactId>
             <version>3.0.5.Final</version>
         </dependency>
+    <dependency>
+  <groupId>org.jsoup</groupId>
+  <artifactId>jsoup</artifactId>
+  <version>1.9.2</version>
+   </dependency>
   
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
