--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
        
 	  <context-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>assignment6.HelloWorldApplication</param-value>
+            <param-value>assignment6.application.HelloWorldApplication</param-value>
       </context-param>
       
       <servlet>
